--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "UA-143409647-1");
+      gtag("config", "UA-6673189-1");
     </script>
 
     <meta charset="utf-8" />
@@ -25,10 +25,10 @@
     <meta name="theme-color" content="#4c2a85" />
     <meta
       name="description"
-      content="Coding From Null is a web development course platform designed for freelancers and anyone who wants to elevate their career. Sign up to receive notifications when new course material becomes available."
+      content="The main vision of this ministry is to spread the word of God and salvation through music. Yes! We live to praise and worship just as David said in Psalms 63:4"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Coding From Null - Coming Soon</title>
+    <title>I Live To Praise And Worship</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
